...
                <outlet property="searchField" destination="Hfv-IE-esp" id="ebj-eM-UfC"/>
                <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" id="F0z-JX-Cv5">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <rect key="contentRect" x="705" y="446" width="1175" height="682"/>
            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
            <value key="minSize" type="size" width="575" height="350"/>
            <view key="contentView" id="se5-gp-TjO">
                <rect key="frame" x="0.0" y="0.0" width="1175" height="682"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            </view>
            <accessibility identifier="DocumentWindow"/>
            <connections>
                <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
            </connections>
            <point key="canvasLocation" x="366.5" y="-655"/>
        </window>
        <customObject id="vF9-dA-dmp" customClass="NewPageMenuDelegate" customModule="Coppice" customModuleProvider="target"/>
...
